# starr-oncology-data-lake-arpah

./: .gitignore  .nojekyll  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  about.html  bdf.yaml  data_dictionary.html  data_evolution_overview.html  data_labeling.html  data_metrics.html  deid_data_metrics.html  index.html  install.R  metadata.html  modality_description.csv  neural_frame.qmd  post_create.sh  pyproject.toml  res_img_mod.rds  results_modality_stats.csv  robots.txt  search.json  sitemap.xml  styles.css  temp_annotations.txt  temp_chroms.txt  variant_occ.html
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
aug_2025/: cap_forms_appendix.html  cap_forms_methods.html  cap_forms_prompt.html  image_occ.html  metrics_clinical.html  metrics_clinical.knit.html  neural_frame.html  phi_labeling_modeling_report.html  phi_labeling_report.html  philips_metrics.html  released_datasets.html  systems_evaluation_table.html  tumor_board.html  tumor_board_updated.html
cancer_omop/: adult_lung_cancer_patients_in_omop.sql  readme.txt
cap_forms_data_dict/: clarity_tables.html  clarity_tables.qmd  index.html  processed_tables.html  processed_tables.qmd  qa_dataset.html  qa_dataset.qmd
deid_aug_2025/: cap_forms_appendix.html  cap_forms_methods.html  image_occ.html  metrics_clinical.html  neural_frame.html  phi_labeling_modeling_report.html  philips_metrics.html  released_datasets.html  tumor_board_updated.html
deid_feb_2025/: demographic_clinical.html  (+4 more)
src/: .gitignore  (+22 more)
(+999 files in other folders)
