[project]
name = "starr-oncology-data-lake-arpah"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.36.0",
    "ipykernel>=6.29.5",
    "lxml>=6.0.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pydicom>=3.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]
